# tier

./: .gitignore  CONTRACT.md  Cargo.toml  README.md
.github/workflows/: publish-validation.yml  publish.yml
examples/: embedding_clustering.rs  hierarchical_conformal.rs
src/: distribution_distance.rs  error.rs  lib.rs  metrics.rs  reconciliation.rs  reconciliation_tests.rs
src/cluster/: dbscan.rs  gmm.rs  hierarchical.rs  it_dendrogram.rs  kmeans.rs  kmeans_elkan.rs  mod.rs  spectral.rs  traits.rs
src/community/: knn_graph.rs  label_prop.rs  leiden.rs  louvain.rs  mod.rs  traits.rs
src/hierarchy/: conformal.rs  dendrogram.rs  foundations.rs  hierarchy.rs  mod.rs  node.rs  raptor.rs  tree.rs  validate.rs
src/summarize/: mod.rs
