[package]
name = "tier"
version = "0.1.0"
authors = ["Arc <attobop@gmail.com>"]
edition = "2021"
rust-version = "1.80"
description = "Clustering and hierarchical structure primitives"
license = "MIT OR Apache-2.0"
repository = "https://github.com/arclabs561/tier"
homepage = "https://github.com/arclabs561/tier"
documentation = "https://docs.rs/tier"
keywords = ["clustering", "community-detection", "hierarchy", "conformal-prediction"]
categories = ["algorithms", "science", "mathematics"]

[dependencies]
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"], optional = true }
ndarray = { version = "0.16", optional = true }
rand = { version = "0.9", optional = true }
rand_distr = { version = "0.5", optional = true }
faer = "0.19"
ndarray-linalg = { version = "0.16", optional = true }
clump = { version = "0.1.0", optional = true }

# Hierarchical clustering
kodama = { version = "0.3", optional = true }

# Graph algorithms
petgraph = { version = "0.6", optional = true }

# kNN graph construction from embeddings (ecosystem crate)
jin = { version = "0.1.0", optional = true }

# Parallel processing
rayon = { version = "1.10", optional = true }

# Clustering evaluation metrics (ecosystem crate)
logp = { version = "0.1.0", optional = true }

# Spectral clustering via graph Laplacians (ecosystem crate)
lapl = { version = "0.1.0", optional = true }

# Kernel methods (ecosystem crate)
rkhs = { version = "0.1.0", optional = true }

# Distribution distances (ecosystem crate)
wass = { version = "0.1.1", optional = true }

# Optional stochastic sampling
kuji = { version = "0.1.0", optional = true }

[features]
#
# Default posture: hierarchy-first, minimal deps.
# Algorithms that pull in heavier deps are explicitly opt-in via features.
default = ["std"]
std = []

# Algorithm groups
cluster = ["std", "ndarray", "rand", "rand_distr", "clump", "dep:kodama"]
community = ["std", "petgraph"]
summarize = ["std"]
full = ["cluster", "community", "summarize", "parallel", "serde", "knn-graph", "metrics", "spectral-faer", "spectral-sparse", "rkhs", "wass", "kuji"]

# Use `kuji` for stochastic sampling.
kuji = ["dep:kuji"]

# Clustering evaluation metrics (NMI, ARI, etc.)
metrics = ["logp"]

# Spectral clustering methods
spectral = ["lapl", "ndarray", "rkhs", "kuji"]
spectral-faer = ["spectral", "lapl/faer"]
spectral-sparse = ["spectral", "lapl/sparse"]

# kNN graph construction from embeddings (for community detection on vector data)
knn-graph = ["community", "jin"]

# Optional
parallel = ["rayon"]
serde = ["dep:serde"]

# Optional ecosystem integrations.
#
# We make these explicit (instead of relying on Cargo's implicit "optional dep => feature")
# so we can also pull in the supporting numeric types they require.
clump = ["dep:clump"]
rkhs = ["dep:rkhs", "ndarray"]
wass = ["dep:wass", "ndarray"]

[dev-dependencies]
proptest = "1.9"
criterion = { version = "0.7", features = ["html_reports"] }

[[example]]
name = "embedding_clustering"
path = "examples/embedding_clustering.rs"
required-features = ["knn-graph"]

[lints.rust]
rust_2018_idioms = { level = "warn", priority = -1 }
rust_2021_compatibility = { level = "warn", priority = -1 }
future_incompatible = { level = "warn", priority = -1 }
nonstandard_style = { level = "warn", priority = -1 }
missing_docs = "warn"
unsafe_code = "warn"
unstable_features = "deny"
unused_import_braces = "warn"
unused_qualifications = "warn"
unused_results = "warn"
trivial_numeric_casts = "warn"
variant_size_differences = "warn"
unused_extern_crates = "warn"
unused_lifetimes = "warn"
semicolon_in_expressions_from_macros = "warn"
unsafe_op_in_unsafe_fn = "warn"
unused_macro_rules = "warn"

[lints.clippy]
correctness = { level = "deny", priority = -1 }
perf = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
restriction = { level = "allow", priority = -1 }
unwrap_in_result = "deny"
unwrap_used = "warn"
expect_used = "warn"
mutex_atomic = "warn"
large_enum_variant = "warn"
empty_loop = "deny"
never_loop = "warn"
doc_markdown = "allow"
too_many_arguments = "allow"
type_complexity = "allow"
multiple_crate_versions = "allow"
wrong_self_convention = "allow"
module_name_repetitions = "allow"

